# GER

./: .dockerignore  .gitignore  BOOTSTRAP_KEYCLOAK.md  DOCKER_SHORTCUTS.md  Dockerfile  Dockerfile.keycloak  Makefile  README.md  amostra_angular.json  amostra_angular_paginacao.json  app_analytics.py  check_menu.py  data_processor.py  database.ipynb  direct_url_dom.html  docker-compose.yml  dom.html  dom_curl.html  dom_scraper.py  duckdb_to_csv.ipynb  entrypoint.sh  fetch_samples.py  fila_espera_dom.html  inspect_bg.py  inspect_rows.py  lista_espera_dom.html  login_dom.html  master_scraper.py  multiscraper.py  nginx.conf  post_login_dom.html  pyproject.toml  scraper.py  setup.cfg  sqlite_to_parquet.py  test_angular.py  test_angular_http.py  test_angular_pag.py  test_direct_url.py  test_filter.py  (+12 more)
.agents/hooks/: post-commit
.agents/rules/: tdd-devops.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-06T19-22-01-694Z.yml  page-2026-04-06T19-28-36-379Z.yml  page-2026-04-06T19-29-44-162Z.yml
docs/: GLOSSARY.md
docs/adr/: 001-redis-distributed-cache.md  002-circuit-breaker-scraper.md  003-sentry-error-tracking.md  004-cloud-run-auth-strategy.md
infra/identity/: gercon-realm-export.json
infra/router/: nginx.conf
k8s/: ingress.yaml
k8s/argocd/: application.yaml
k8s/base/: cronjob.yaml  deployment.yaml  externalsecret.yaml  kustomization.yaml  service.yaml
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: default.yml
monitoring/prometheus/: alerts.yml
src/application/use_cases/: analytics_use_case.py  interfaces.py  scraper_interfaces.py  scraper_use_case.py
src/domain/: identity.py  models.py  schemas.py  solicitacao_mapper.py  specifications.py
src/infrastructure/: config.py  telemetry.py
src/infrastructure/adapters/: playwright_scraper.py
src/infrastructure/auth/: jwt_validator.py  token_acl.py
src/infrastructure/events/: keycloak_kafka_consumer.py
src/infrastructure/queue/: worker_settings.py
src/infrastructure/repositories/: csv_data_repository.py  duckdb_repository.py  parquet_data_repository.py  sqlite_raw_repository.py
src/infrastructure/telemetry/: logger.py  metrics.py  sentry.py  tracing.py
src/presentation/adapters/: parsers.py
src/presentation/api/: dependencies.py
static/: index.html
terraform/: main.tf
tests/: conftest.py
tests/application/: test_analytics_use_case.py  test_scraper_use_case.py
tests/domain/: test_data_freshness.py  test_ingestion_log.py  test_solicitacao_mapper.py  test_specifications.py
tests/e2e/: test_dashboard_flow.py
tests/infrastructure/: test_chaos_resilience.py  test_gercon_contract.py  test_ingestion_log_adapter.py  test_sentry_integration.py  test_specification_translator.py
tests/presentation/: debug_apptest.py  test_app_ui.py  test_cdc_kpis.py  test_parsers.py  test_smoke_app.py
