[project]
name = "ger-analytics"
version = "0.1.0"
description = "Advanced Root Cause Analysis and Scraper for Gercon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.42.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "aiokafka>=0.10.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "s3fs>=2026.3.0",
    "python-json-logger>=4.1.0",
    "prometheus-client>=0.24.1",
    "rq>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "mutmut>=2.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "mutants",
    ".mutmut-cache"
]
