[project]
name = "ger-analytics"
version = "0.1.0"
description = "Advanced Root Cause Analysis and Scraper for Gercon"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "duckdb>=1.0.0",
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.42.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "aiokafka>=0.10.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "s3fs>=2026.3.0",
    "python-json-logger>=4.1.0",
    "prometheus-client>=0.24.1",
    "rq>=2.7.0",
    "sentry-sdk[streamlit]>=2.0.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "mutmut>=2.4.4",
    "pytest-playwright>=0.7.2",
    "tenacity>=9.1.4",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
# WHY: --cov removed from addopts because mutmut 3.x calls pytest.main()
# directly and coverage plugins corrupt its stats collection.
# Use explicit: uv run pytest --cov=src --cov-report=term-missing --cov-fail-under=85

[tool.mutmut]
paths_to_mutate = ["src/"]
# WHY: tests_dir is intentionally EMPTY. Mutmut 3.x appends tests_dir to
# pytest_add_cli_args_test_selection internally. Setting tests_dir=["tests/"]
# would add the broad "tests/" path alongside our surgical subdirectory list,
# causing E2E tests (tests/e2e/) to leak into mutation runs.
# These args are appended to every pytest invocation inside the mutmut sandbox.
pytest_add_cli_args = ["-p", "no:cacheprovider", "-p", "no:cov", "--no-header", "-q", "--tb=no"]
pytest_add_cli_args_test_selection = [
    "tests/domain/",
    "tests/application/",
    "tests/infrastructure/",
    "tests/presentation/"
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "mutants",
    ".mutmut-cache"
]

[tool.coverage.run]
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
    "src/application/use_cases/interfaces.py",
    "src/application/use_cases/scraper_interfaces.py",
    "src/infrastructure/telemetry/*.py",
    "src/infrastructure/telemetry.py",                # FIX: Raiz da telemetria
    "src/domain/identity.py",                         # Modelos declarativos/Auth
    "src/infrastructure/adapters/playwright_scraper.py",
    "src/infrastructure/repositories/parquet_data_repository.py" # FIX: Pure I/O Bound
]
